# gb_emu

./: .gitignore  CMakeLists.txt  logs.txt
data/: opcodes.json
include/: cpu.h  debug.h  display.h  mem.h  rom.h  util.h
src/: cpu.c  debug.c  display.c  main.c  mem.c  rom.c  util.c
